Readme updated, linker example added.